--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
 	
-	<title>Ayyam Perumal</title>
+	<title> BENEDICT OKOLA</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<!-- STYLESHEETS -->
@@ -92,7 +92,7 @@
 	
         <nav class="navbar navbar-expand-lg navbar-dark">
            
-            <b class="navbar-brand">Ayyam Perumal</b> 
+            <b class="navbar-brand">BENEDICT OKOLA</b> 
 
             <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -122,10 +122,10 @@
 			<!-- intro -->
 			<div class="intro">
 				<!-- avatar image -->
-				<img src="me.png" style="width: 150px;border-radius: 100px" class="mb-4">
+				<img src="IMG_20220728_132822" style="width: 150px;border-radius: 100px" class="mb-4">
 
 				<!-- info -->
-				<h1 class="mb-2 mt-0">Ayyam perumal</h1>
+				<h1 class="mb-2 mt-0">BENEDICT OKOLA</h1>
 				<span>I'm a <span class="text-rotating morphext"><span class="animated bounceIn">Developer</span></span></span>
 			</div>
 
@@ -174,8 +174,8 @@
 				<div class="col-md-3">
 					<div class="text-center text-md-left">
 						<!-- avatar image -->
-						<img src="me.png" style="width: 150px;border-radius: 100px" class="mb-4">
-					</div>
+						<img src="IMG_20220728_132822" style="width: 150px;border-radius: 100px" class="mb-4">
+					</div>ssss
 					<div class="spacer d-md-none d-lg-none" data-height="30" style="height: 30px;"></div>
 				</div>
 
@@ -184,7 +184,7 @@
 						<div class="row">
 							<div class="col-md-6">
 								<!-- about text -->
-								<p>I am Ayyam Perumal, a web developer a from Bangalore, India. I have rich experience in building and customizing websites and app, also I am good at Coding. Recently I have started learning machine learning and have created great apps which are mention below</p>
+								<p>I am Benedict Okola, a web developer a from Kisii University, Kenya. I have rich experience in building and customizing websites and app, also I am good at Coding. Recently I have started learning machine learning and have created great apps which are mention below</p>
 
 								<div class="spacer d-md-none d-lg-none" data-height="30" style="height: 30px;"></div>
 							</div>
@@ -599,8 +599,8 @@
    					<hr style="border: 0.5px solid white;">
       				<p style="color: white;">Let us be social</p>
 
-				    <a href="#">
-				      <img src="instagram.png" style="width: 40px;margin: 5px">
+				    <a href="https://twitter.com/NullBenox?t=sJCKagrHHHnA8KPhINcwQQ&s=08">
+				      <img src=" " style="width: 40px;margin: 5px">
 				    </a>
 				</div>
 
