--- a/index.html
+++ b/index.html
@@ -586,9 +586,9 @@
 				
 				<div class="col-md-8">
 
-					<h3 class="wow fadeInUp" style="color: white;visibility: visible; animation-name: fadeInUp;">Victor Cardoz</h3>
+					<h3 class="wow fadeInUp" style="color: white;visibility: visible; animation-name: fadeInUp;"> Null Benox</h3>
 				    <hr style="border: 0.5px solid white;">
-					<img src="me.png" style="display: inline-block; width: 100px;border-radius: 100px" class="mb-4">
+					<img src="Null.png" style="display: inline-block; width: 100px;border-radius: 100px" class="mb-4">
             		<p style="margin: 5px; color: white; display: inline-block;">Please free feel to contact me on my social handles</p>
 
 				</div>
