--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			<!-- intro -->
 			<div class="intro">
 				<!-- avatar image -->
-				<img src="me" style="width: 150px;border-radius: 100px" class="mb-4">
+				<img src="https://pbs.twimg.com/profile_images/1598635711946756096/Fg-lfs1P.jpg" style="width: 150px;border-radius: 100px" class="mb-4">
 
 				<!-- info -->
 				<h1 class="mb-2 mt-0">BENEDICT OKOLA</h1>
@@ -174,7 +174,7 @@
 				<div class="col-md-3">
 					<div class="text-center text-md-left">
 						<!-- avatar image -->
-						<img src="me" style="width: 150px;border-radius: 100px" class="mb-4">
+						<img src="https://pbs.twimg.com/profile_images/1598635711946756096/Fg-lfs1P.jpg" style="width: 150px;border-radius: 100px" class="mb-4">
 					</div>ssss
 					<div class="spacer d-md-none d-lg-none" data-height="30" style="height: 30px;"></div>
 				</div>
@@ -588,7 +588,7 @@
 
 					<h3 class="wow fadeInUp" style="color: white;visibility: visible; animation-name: fadeInUp;"> Null Benox</h3>
 				    <hr style="border: 0.5px solid white;">
-					<img src="me" style="display: inline-block; width: 100px;border-radius: 100px" class="mb-4">
+					<img src="https://pbs.twimg.com/profile_images/1598635711946756096/Fg-lfs1P.jpg" style="display: inline-block; width: 100px;border-radius: 100px" class="mb-4">
             		<p style="margin: 5px; color: white; display: inline-block;">Please free feel to contact me on my social handles</p>
 
 				</div>
@@ -600,7 +600,7 @@
       				<p style="color: white;">Let us be social</p>
 
 				    <a href="https://twitter.com/NullBenox?t=sJCKagrHHHnA8KPhINcwQQ&s=08">
-				      <img src="me" style="width: 40px;margin: 5px">
+				      <img src="https://pbs.twimg.com/profile_images/1598635711946756096/Fg-lfs1P.jpg" style="width: 40px;margin: 5px">
 				    </a>
 				</div>
 
