--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
    					<hr style="border: 0.5px solid white;">
       				<p style="color: white;">Let us be social</p>
 
-				    <a href="https://twitter.com/NullBenox?t=sJCKagrHHHnA8KPhINcwQQ&s=08">
+				    <a href url="https://twitter.com/NullBenox?t=sJCKagrHHHnA8KPhINcwQQ&s=08">
 				      <img src="https://pbs.twimg.com/profile_images/1598635711946756096/Fg-lfs1P.jpg" style="width: 40px;margin: 5px">
 				    </a>
 				</div>
